err/openalea.deploy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/openalea'...
Listing './lib/python3.5/site-packages/openalea/deploy'...
Compiling './lib/python3.5/site-packages/openalea/deploy/alea_config.py'...
***   File "./lib/python3.5/site-packages/openalea/deploy/alea_config.py", line 38
    print get_dyn_lib_dir()
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/openalea/deploy/alea_update.py'...
***   File "./lib/python3.5/site-packages/openalea/deploy/alea_update.py", line 35
    print "Remove ", project_name, version, location
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/openalea/deploy/autosum_generator.py'...
***   File "./lib/python3.5/site-packages/openalea/deploy/autosum_generator.py", line 41
    exec "import %s as pkg" % pkg_name
                          ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/openalea/deploy/command.py'...
***   File "./lib/python3.5/site-packages/openalea/deploy/command.py", line 446
    print commandstr
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/openalea/deploy/environ_var.py'...
***   File "./lib/python3.5/site-packages/openalea/deploy/environ_var.py", line 75
    print "Warning : Cannot create /etc/profile.d/%s.sh" % (name)
                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/openalea/deploy/gforge.py'...
***   File "./lib/python3.5/site-packages/openalea/deploy/gforge.py", line 72
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/openalea/deploy/gforge_util.py'...
***   File "./lib/python3.5/site-packages/openalea/deploy/gforge_util.py", line 81
    raise TypeError, "not a valid non-string sequence or mapping object", traceback
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/openalea/deploy/install_lib.py'...
***   File "./lib/python3.5/site-packages/openalea/deploy/install_lib.py", line 78
    print 'Reading shared-lib.pth found in %s' % lib_dir
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/openalea/deploy/metainfo.py'...
***   File "./lib/python3.5/site-packages/openalea/deploy/metainfo.py", line 36
    print green('Reading metainfo ')
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/openalea/deploy/shortcut.py'...
***   File "./lib/python3.5/site-packages/openalea/deploy/shortcut.py", line 63
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/openalea/deploy/system_dependencies'...
Compiling './lib/python3.5/site-packages/openalea/deploy/system_dependencies/dependency.py'...
***   File "./lib/python3.5/site-packages/openalea/deploy/system_dependencies/dependency.py", line 173
    print command
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/openalea/deploy/system_dependencies/dependency_builder.py'...
***   File "./lib/python3.5/site-packages/openalea/deploy/system_dependencies/dependency_builder.py", line 233
    print "Unknown content length, cannot determine if download can be skipped..."
                                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/openalea/deploy/system_dependencies/deploy_system.py'...
***   File "./lib/python3.5/site-packages/openalea/deploy/system_dependencies/deploy_system.py", line 38
    print "Do you wish to install the required runtime packages:\n"
                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/openalea/deploy/system_dependencies/deploy_system2.py'...
***   File "./lib/python3.5/site-packages/openalea/deploy/system_dependencies/deploy_system2.py", line 120
    print c_o_r
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/openalea/deploy/system_dependencies/egg_rules.py'...
***   File "./lib/python3.5/site-packages/openalea/deploy/system_dependencies/egg_rules.py", line 83
    print "laaaaaaaaaaaaaaaajfdshfsdosfdo", extra_pyqt4_mods
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/openalea/deploy/system_dependencies/project_rules.py'...
***   File "./lib/python3.5/site-packages/openalea/deploy/system_dependencies/project_rules.py", line 182
    print "it's alive!"
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/openalea/deploy/system_dependencies/qtpatch.py'...
***   File "./lib/python3.5/site-packages/openalea/deploy/system_dependencies/qtpatch.py", line 30
    print qtDirPath, "does not exist"
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/openalea/deploy/system_dependencies/rpy2_setup.py'...
***   File "./lib/python3.5/site-packages/openalea/deploy/system_dependencies/rpy2_setup.py", line 19
    print ctypes.windll.kernel32.GetLastError()
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/openalea/deploy/system_dependencies/ubuntu_release.py'...
***   File "./lib/python3.5/site-packages/openalea/deploy/system_dependencies/ubuntu_release.py", line 190
    print "%s: \n"%p + '\t'+cmd
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/openalea/deploy/util.py'...
***   File "./lib/python3.5/site-packages/openalea/deploy/util.py", line 242
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/openalea.deploy-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
